# Hack-for-social-impact

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  resource_finder.py  start_api.py
backend/: indevapicall.py  main.py  mcpserver.py
chatbot-frontend/: eslint.config.js  package-lock.json  package.json
chatbot-frontend/src/: App.jsx
serpertest/: housing-options.py  research_results.json
tests/: TEST_RESULTS.md  TIMING_ANALYSIS.md  test_timing.py
