[project]
name = "hack-for-social-impact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "fastmcp>=2.13.0.2",
    "google-search-results>=2.4.2",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.38.0",
]
